assets/css/style.css
/* ... */
/* Arrow icon inside 'Interact' button */
.fa-chevron-down {
    font-size: 1.2rem;
    font-weight: bold;
}

#walk-button {
    font-size: 2.2rem;
}

#walk-button:hover, .interact-button:hover {
    color: black;
}

button#add-first-pokemon {
    color: black;
    border: 5px solid var(--quaternary-colour);
    border-bottom: 6px solid var(--secondary-colour);
    border-left: 6px solid var(--secondary-colour);
}

button#add-first-pokemon:hover {
    background-color: var(--tertiary-colour);
}

.secondary-button {
    border-radius: 20px;
}

.navbar button {
    margin: 0;
}

#refresh-personalities-main {
    display: none;
}

.rename-pokemon {
    color: var(--secondary-colour);
    border: 4px solid var(--secondary-colour)
}

/* Header and Navbar */

#page-title span {
    color: var(--quaternary-colour);
}

nav p,
nav .nav-link {
    padding: 0 20px;
    color: var(--quaternary-colour-pale);
    margin-top: 7px;
}

/* Main - Starter Form */

.starter {
    background-color: var(--primary-colour-pale);
    color: var(--secondary-colour);
    border: 5px solid var(--quaternary-colour);
    border-bottom: 5px solid var(--secondary-colour);
    border-left: 5px solid var(--secondary-colour);
    border-radius: 20px;
    margin: 2px 0;
    padding: 0 2px;
}

.starter.selected-starter {
    border: 5px solid black;
    background-color: var(--tertiary-colour);
}

.starter label {
    font-size: 3.5rem;
}

.details>p {
    color: var(--quaternary-colour);
    line-height: 0.8;
}

.radio-arrow {
    color: black;
    font-weight: 900;
    font-size: 1.4rem;
}

/* Main - Pokémon Collection */

.page-section {
    margin: 20px 0;
    padding: 30px;
    border: 5px solid var(--secondary-colour);
    border-radius: 20px;
}

#pokemon-collection {
    margin: 20px 300px;
}

.pokemon-card {
    background-color: var(--primary-colour-pale);
    color: var(--secondary-colour);
    border: 5px solid var(--quaternary-colour);
    border-bottom: 6px solid var(--secondary-colour);
    border-left: 6px solid var(--secondary-colour);
    border-radius: 20px;
    margin: 10px 0;
    padding: 10px;
}

.pokemon-card>h2 {
    line-height: 0.8;
}

.details>.level {
    color: var(--secondary-colour);
    font-size: 2.7rem;
}

.details .personality {
    color: var(--secondary-colour);
}

.starter .personality {
    min-height: 3.2rem;
    /* this is the minimum height needed to ensure the 
    height matches even if personalities change to 2 lines */
}

p.small-details {
    color: var(--quaternary-colour);
    line-height: 0.8;
    padding-left: 10px;
}

.small-details span {
    color: var(--secondary-colour);
    font-size: 1.8rem;
}

progress {
    width: 100%;
    /* This fixes the issues with progress bars not filling full space at some screen sizes */
    margin: 0;
}

/* Interact Menu */
ul.dropdown-menu {
    background-color: var(--tertiary-colour);
    border: 4px solid var(--secondary-colour);
    border-radius: 18px;
    padding: 10px 0;
}

ul.dropdown-menu button {
    color: var(--secondary-colour);
}

ul.dropdown-menu button:hover {
    color: black;
    background-color: var(--primary-colour-pale);
}

.dropdown-item {
    margin-top: 6px;
    font-size: 2rem;
}

.dropdown-divider {
    margin: 2px 0;
}

/* Footer */

footer {
    background-color: var(--tertiary-colour);
    /* this is added so the footer sticks to the bottom even on larger screens  */
    margin-top: auto;
}

#footer-text {
    margin-top: 6px;
    color: var(--secondary-colour);
}

#footer-text i {
    font-size: 1.2rem;
    font-weight: bold;
    color: var(--quaternary-colour);
}

footer span {
    color: var(--quaternary-colour);
}

/* Carousel */

#tipCarousel {
    background-color: var(--primary-colour-pale);
    border-bottom: 11px solid var(--primary-colour);
    padding: 30px 0 50px 0;
}

.carousel-item p {
    /* adjusted so height doesn't change on different screen sizes when more rows of text  */
    min-height: 8rem;
    text-wrap: balance;
}

/* Modals - modal-content > modal-inner > modal-header, modal-body, modal-footer */

.modal-content {
    background-color: var(--primary-colour-pale);
    border: 4px solid var(--secondary-colour);
    border-radius: 30px;
    color: var(--secondary-colour);
    padding: 20px;
}

.modal-content .btn-close {
    border: none;
    font-size: 1.5rem;
}

.modal-content button {
    border: 4px solid var(--secondary-colour);
    border-radius: 20px;
    text-transform: capitalize;
    /* might not need all of above - look at later */
    color: var(--secondary-colour);
    background-color: var(--tertiary-colour);
    margin: 0 15px;
    font-size: 2.5rem;
}

.modal-content button:hover {
    color: black;
    background-color: var(--primary-colour-pale);
    border: 4px solid var(--secondary-colour);
}

.modal-inner {
    background-color: var(--tertiary-colour);
    border-radius: 50px;
}

#releaseModal .modal-inner, #walkDisturbanceModal .modal-inner, #wildRenametModal .modal-inner {
    padding: 20px 10px;
}

.modal-header {
    border-bottom: 0px;
    padding-bottom: 0px;
}

.modal-header .modal-title {
    line-height: 1;
}

.main-modal-content {
    color: black;
    font-size: 2.5rem;
    line-height: 0.8;
}

.modal-body {
    padding: 0;
}

.modal-footer {
    border-top: 0px;
}

.modal-footer .confirm-modal-button {
    border: 4px solid var(--quaternary-colour);
    border-bottom: 4px solid var(--secondary-colour);
    border-left: 4px solid var(--secondary-colour);
}

.modal-footer .secondary-button {
    color: var(--quaternary-colour);
    border: 4px solid var(--quaternary-colour);
}

/* Modal Inputs */
#new-nickname, #wild-new-nickname {
    min-width: 60%;
    max-width: 100%;
    margin-bottom: 5px;
}


@media (max-width: 2600px) {

    #pokemon-collection {
        margin: 20px 200px;
    }

}

@media (max-width: 2200px) {

    #pokemon-collection {
        margin: 20px 100px;
    }

}
/* ... */

